--- a/tour-main/src/screens/Details.css
+++ b/tour-main/src/screens/Details.css
@@ -1,13 +1,30 @@
-.carousel-img{
-    width: 300px;
-    height: 400px;
-}
-
 #container{
     display: flex;
     flex-wrap: nowrap;
+    padding: 0px 20px;
+    gap : 20px
 }
 
-#container :nth-child(1){
-    width: 60vw;
+#description-area{
+    width: 70vw;
+}
+
+#form-container{
+    width: 30vw;
+    padding: 20px 20px;
+    display: flex;
+    flex-direction: column;
+    gap : 10px;
+    background-color: antiquewhite;
+    border: 1px solid rgb(236, 184, 184);
+    margin-top: 20px;
+}
+
+.form-field > input {
+    margin-left: 4px;
+}
+
+.sold-out {
+    background-color: rgb(225, 133, 133);
+    padding: 10px
 }
